Criei a página principal mudança 1

--- a/site teste/index.html
+++ b/site teste/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>Olá, mundo!</h1>
-	<p>Lorem  ipsum siafdukvddabsdf sadbuksvcs asugasuyfdcbz asdbcuoasdblc</p>
+	<p>Praesent varius eleifend lacus, sed ultricies nisl pellentesque quis. Proin metus dui, elementum ut nisl sed, dapibus dapibus nisl. Nulla mollis, eros sit amet bibendum ultrices, erat nisl facilisis lorem, eu pulvinar nibh massa ac orci. Sed ullamcorper neque orci, eu consequat tortor interdum at. Proin sed blandit ipsum. Suspendisse eu neque sagittis, tempus lectus ac, commodo sapien. Nullam a sem a quam vehicula aliquam nec nec mi. Sed lectus magna, vehicula eget quam eget, fringilla varius ante. Integer vestibulum neque tortor, in scelerisque lectus malesuada eget.</p>
 </body>
 </html>
